# evo-house

./: .gitignore  README.md  pyproject.toml
evo_house/: __main__.py  constants.py  ga.py  generators.py  graph.py  operators.py  render.py  selection.py  utils.py
evo_house/fitness/: __init__.py  circulation.py  flow.py  intersection.py  penalty.py  setorization.py
evo_house/representation/: __init__.py  floor.py  room.py  stairs.py
